<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>sh.adelessfox</groupId>
    <artifactId>psarc</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>24</maven.compiler.source>
        <maven.compiler.target>24</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <target.module.path>target/modules</target.module.path>

        <lib.javafx.version>24.0.2</lib.javafx.version>
        <lib.ikonli.version>12.3.1</lib.ikonli.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.18</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${lib.javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>2.1.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>sh.adelessfox.psarc.Main</mainClass>
                    <options>
                        <option>--enable-native-access=javafx.graphics</option>
                        <option>-Dprism.forceUploadingPainter=true</option>
                    </options>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <outputDirectory>${target.module.path}</outputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <includeScope>runtime</includeScope>
                            <outputDirectory>${target.module.path}</outputDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.panteleyev</groupId>
                <artifactId>jpackage-maven-plugin</artifactId>
                <version>1.6.5</version>
                <configuration>
                    <type>APP_IMAGE</type>
                    <appVersion>1.0</appVersion>
                    <name>${project.name}</name>
                    <destination>target/dist</destination>
                    <vendor>ShadelessFox</vendor>
                    <modulePaths>
                        <modulePath>${target.module.path}</modulePath>
                    </modulePaths>
                    <addModules>
                        <module>java.naming</module>
                    </addModules>
                    <jLinkOptions>
                        <jLinkOption>--compress=2</jLinkOption>
                        <jLinkOption>--strip-debug</jLinkOption>
                        <jLinkOption>--strip-native-commands</jLinkOption>
                        <jLinkOption>--no-header-files</jLinkOption>
                        <jLinkOption>--no-man-pages</jLinkOption>
                    </jLinkOptions>
                    <javaOptions>
                        <javaOption>--enable-native-access=javafx.graphics</javaOption>
                        <javaOption>-Dprism.forceUploadingPainter=true</javaOption>
                    </javaOptions>
                    <module>psarc.app/sh.adelessfox.psarc.Main</module>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>jpackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>